[gd_scene load_steps=24 format=3 uid="uid://lhlklylca50m"]

[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player.gd" id="1_kmike"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/State_Manager.gd" id="2_c5aqi"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/Idle_State.gd" id="3_f5lbm"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/Walk_State.gd" id="4_fu07a"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/Crouch_State.gd" id="6_ib15b"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/Jump_State.gd" id="7_b1yw5"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/HeightAlterator.gd" id="8_rgs2k"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Player_States/Fall_State.gd" id="8_xbf4w"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/WeaponManager.gd" id="9_alxax"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/HeadBop.gd" id="10_6kxr3"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/WeaponBob.gd" id="12_4bkuj"]
[ext_resource type="Texture2D" uid="uid://ds6uye256hjrj" path="res://Scenes_Scripts/crosshair.png" id="13_20fa4"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/CameraShake.gd" id="13_gi0ur"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/InteractionManager.gd" id="13_qk48y"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/Alterators/CutsceneEffectManager.gd" id="13_trho6"]
[ext_resource type="Shader" path="res://Scenes_Scripts/Shaders/GodotRetro/Screen Shaders/Aditional Shaders/Dithering.gdshader" id="14_ekeqm"]
[ext_resource type="Shader" path="res://Scenes_Scripts/Shaders/Grain.gdshader" id="15_pu8nk"]
[ext_resource type="PackedScene" uid="uid://dv5syngbq0ouk" path="res://Scenes_Scripts/Entities/Player/MonologueUI.tscn" id="16_468sw"]

[sub_resource type="CapsuleShape3D" id="15"]
radius = 0.15
height = 1.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hata5"]
height = 0.01
radius = 0.18

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1e1y2"]
shader = ExtResource("14_ekeqm")
shader_parameter/SCREEN_WIDTH = 160.0
shader_parameter/COLOR_FACTOR = 50.0
shader_parameter/DITHERING_STRENTH = 0.005

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dcbvy"]
shader = ExtResource("15_pu8nk")
shader_parameter/colored = false
shader_parameter/color_amount = 0.6
shader_parameter/grain_amount = 0.025
shader_parameter/grain_size = 1.4
shader_parameter/lum_amount = 0.09

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3mfp7"]
height = 3.0
radius = 0.15

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 198
input_ray_pickable = false
script = ExtResource("1_kmike")
MOUSE_SENSITIVITY = 0.4
gravity_multiplier = 0.05

[node name="Scripts" type="Node" parent="."]

[node name="StateManager" type="Node" parent="Scripts" node_paths=PackedStringArray("starting_state", "states")]
editor_description = "Manages Player states;
Stores the starting (default) State; the state that the Player is spawned in
Stores all the States, in case the current_state has to be changed by a Node/script that isn't the StateManager
Can change the current_state on behest of an individual State"
script = ExtResource("2_c5aqi")
starting_state = NodePath("Idle")
states = [NodePath("Idle"), NodePath("Walk"), NodePath("Crouch"), NodePath("Jump"), NodePath("Fall")]

[node name="Idle" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("walk_state", "crouch_state", "jump_state", "fall_state")]
script = ExtResource("3_f5lbm")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Walk" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "crouch_state", "jump_state", "fall_state")]
script = ExtResource("4_fu07a")
idle_state = NodePath("../Idle")
crouch_state = NodePath("../Crouch")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Crouch" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "jump_state", "fall_state")]
script = ExtResource("6_ib15b")
speed_multiplier = 0.6
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Jump" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "crouch_state", "jump_state")]
script = ExtResource("7_b1yw5")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")
jump_state = NodePath(".")

[node name="GroundTimer" type="Timer" parent="Scripts/StateManager/Jump"]
editor_description = "The FloorCast is used to check for a floor beneath the Player,
but when the Player jumps, there's a tiny window of time for the FloorCast to detect a floor,
which immediately disables the jump.
This Timer is used as a workaround to that problem - we wait until this Timer is finished to check if there's a floor beneath the Player."
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="Fall" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "crouch_state")]
script = ExtResource("8_xbf4w")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")

[node name="WeaponManager" type="Node" parent="Scripts"]
script = ExtResource("9_alxax")

[node name="HeightAlterator" type="Node" parent="Scripts"]
editor_description = "Alters the height of:
-Collider
-FeetCollider
-FloorCast
-Head
nodes, for ex. the Crouch State
Initially a part of the Crouch state; soon made a separate script for ease of use and decluttering"
script = ExtResource("8_rgs2k")

[node name="HeadBob" type="Node" parent="Scripts" node_paths=PackedStringArray("bobbing_node")]
editor_description = "Makes the chosen bopped_node - the Head or the Camera:
-bop right and left as the Player walks
-tilt to the side when moving  left or right
-tilt down or up when moving forwards or backwards
-tilt up when jumping
-tilt down while falling


Done for better immersion and responsivity"
script = ExtResource("10_6kxr3")
bobbing_node = NodePath("../../Head/BobbingNode")
bob_multiplier = 48.0

[node name="WeaponBob" type="Node" parent="Scripts" node_paths=PackedStringArray("bobbing_node")]
script = ExtResource("12_4bkuj")
bobbing_node = NodePath("../../Head/BobbingNode/Firearms")

[node name="InteractionManager" type="Node" parent="Scripts" node_paths=PackedStringArray("ray_start_pos_node")]
script = ExtResource("13_qk48y")
InteractableCast_range = 10.0
ray_start_pos_node = NodePath("../../Head/BobbingNode/PlayerCamera")

[node name="UIController" type="Node" parent="Scripts"]

[node name="CutsceneEffectManager" type="Node" parent="Scripts"]
script = ExtResource("13_trho6")

[node name="CameraShake" type="Node" parent="Scripts"]
script = ExtResource("13_gi0ur")
randomStrength = 0.01

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
editor_description = "Timer that allows to jump immediately after hitting the ground, if the jump button is pressed within 0.2s before hitting that ground
Keep this Timer's around 0.2s for a nice, lean and forgivable jump
Never reset this Timer, at least not on state exit(). Causes a bug when jump_state is re-enter()-ed, thus not allowing for another jump - implementation issue with how the Jump_state check for the ground, not planning on fixing it"
wait_time = 0.2
one_shot = true

[node name="Collider" type="CollisionShape3D" parent="."]
editor_description = "Main body Collider for the Player
Its height can be changed through the HeightAlternator"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("15")

[node name="FeetCollider" type="CollisionShape3D" parent="."]
editor_description = "\"Feet\" collider for the Player
Its height can be changed through the HeightAlternator
The regualar Collider makes the Player fall off edges, and this collider prevents that"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_hata5")
disabled = true

[node name="FloorCast" type="RayCast3D" parent="."]
editor_description = "A short RayCast3D placed at the very bottom of the Collider
Activated for a single frame with check_for_floor() in the Player script"
enabled = false
target_position = Vector3(0, -0.25, 0)
collision_mask = 66
hit_from_inside = true
debug_shape_custom_color = Color(1, 1, 1, 1)
debug_shape_thickness = 5

[node name="Head" type="Marker3D" parent="."]
editor_description = "Holds the Camera as its child
Change it's Y position (height) through the HeightAlternator to make the camera move along with it,
for example when crouching"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
gizmo_extents = 0.1

[node name="BobbingNode" type="Node3D" parent="Head"]
editor_description = "This node is bobbed by the HeadBob script instead of the Head node
Using the Head node for bobbing nullifies mouse movement, which also rotates the Head node"

[node name="PlayerCamera" type="Camera3D" parent="Head/BobbingNode"]
editor_description = "Main Player camera, typically placed at Head's (0, 0, 0) coordinate
Its FOV can be changed through an exported variable in the Player node"
current = true
fov = 90.0

[node name="CutsceneEffects" type="Control" parent="Head/BobbingNode/PlayerCamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeToBlack" type="ColorRect" parent="Head/BobbingNode/PlayerCamera/CutsceneEffects"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="HUD" type="Control" parent="Head/BobbingNode/PlayerCamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="CenterContainer" parent="Head/BobbingNode/PlayerCamera/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
auto_translate = false
localize_numeral_system = false
mouse_filter = 2

[node name="CrosshairSprite" type="Sprite2D" parent="Head/BobbingNode/PlayerCamera/HUD/Crosshair"]
texture = ExtResource("13_20fa4")

[node name="Monologue" parent="Head/BobbingNode/PlayerCamera/HUD" instance=ExtResource("16_468sw")]
layout_mode = 1

[node name="Postprocessing" type="Control" parent="Head/BobbingNode/PlayerCamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DitheringBuffer" type="BackBufferCopy" parent="Head/BobbingNode/PlayerCamera/Postprocessing"]
copy_mode = 2

[node name="DitheringShader" type="ColorRect" parent="Head/BobbingNode/PlayerCamera/Postprocessing"]
material = SubResource("ShaderMaterial_1e1y2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrainBuffer" type="BackBufferCopy" parent="Head/BobbingNode/PlayerCamera/Postprocessing"]
copy_mode = 2

[node name="GrainShader" type="ColorRect" parent="Head/BobbingNode/PlayerCamera/Postprocessing"]
material = SubResource("ShaderMaterial_dcbvy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractableCast" type="ShapeCast3D" parent="Head/BobbingNode"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
enabled = false
shape = SubResource("CylinderShape3D_3mfp7")
target_position = Vector3(0, -1.5, 0)
max_results = 8
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="TPMarker" type="Marker3D" parent="Head/BobbingNode"]
editor_description = "Marks the position of the Camera's third person view
Janky and not very developed. Could be expanded upon"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
visible = false

[node name="Firearms" type="Marker3D" parent="Head/BobbingNode"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.315, -0.264, -0.106)
